ai-models/phi-3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: models
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
