ai-models/phi-3/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phi-3-mini-chat-route
  namespace: models
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: phi-3-mini-chat-predictor
  port:
    targetPort: http
  tls:
    termination: edge
